# chrome-agent

./: CLAUDE.md  Cargo.toml  README.cn.md  README.md  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.sh  llm-guide.txt  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-27-llm-cli-improvements.md  2026-03-27-v2-design.md  2026-03-27-v2-implementation-plan.md
npm/: README.md  package.json
npm/scripts/: postinstall.js
scripts/: release.sh
skills/aibrowsr/: SKILL.md
skills/chrome-agent/: SKILL.md
src/: base64.rs  browser.rs  cli.rs  daemon.rs  element.rs  element_ref.rs  element_selector.rs  geometry.rs  main.rs  pipe.rs  pipe_dispatch.rs  run.rs  run_helpers.rs  session.rs  setup.rs  snapshot.rs  truncate.rs
src/cdp/: client.rs  mod.rs  transport.rs  types.rs
src/commands/: batch.rs  check.rs  click.rs  console.rs  dblclick.rs  diff.rs  download.rs  drag.rs  eval.rs  extract.rs  fill.rs  frame.rs  goto.rs  history.rs  inspect.rs  mod.rs  network.rs  pdf.rs  read.rs  record.rs  screenshot.rs  select.rs  snap.rs  tabs.rs  text.rs  upload.rs  wait.rs
tests/: browser_lab_regressions.rs  cli_tests.rs  download_limit_tests.rs  extract_tests.rs  frame_tests.rs  proxy_tests.rs
tests/fixtures/: dialog_click.html  extract_ads_interleaved.html  extract_cards.html  extract_definition_list.html  extract_ecommerce.html  extract_flat_table.html  extract_hn_like.html  extract_link_heavy_nav.html  extract_list.html  extract_mixed.html  extract_nested_nav.html  extract_no_pattern.html  extract_semantic_classes.html  extract_table.html  frame_child.html  frame_nested_child.html  frame_nested_grandchild.html  frame_nested_parent.html  frame_parent.html
tests/js/: extract.adversarial.test.js  extract.codex.test.js  extract.edge.test.js  extract.fixtures.test.js  helpers.js  package.json
