[package]
name = "aibrowsr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
dirs = "5"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
